replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/valid/27_string_auto_embed.su

function vector FromExplicitVector() {
    vector v = "cat";
    return v;
}

function vector FromUntypedVar() {
    var x = "dog";
    return x;
}

function int FromCharSyntax() {
    char c = "c";
    return c;
}

function string KeepsAsString() {
    string s = "hello";
    return s;
}

// Compare against the explicit basis_vector call — still valid.
function vector ExplicitBasis() {
    vector v = basis_vector("bird");
    return v;
}
