replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/02_missing_semicolon.su
// Expected error: AKA0100 - missing `;` after declaration.

function vector Bad() {
    var x = embed("cat")
    return x;
}
